[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package]
name = "rust_os"
version = "0.1.0"
authors = ["0kaguya <carbonc014@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.5.1"
volatile = "0.2.3"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.4.9"
uart_16550 = "0.1.0"

[dev-dependencies]
array-init = "0.0.3"

[package.metadata.bootimage]
default-target = "x86_64-rust_os.json"
